fix or fa-icons spacing

--- a/css/josephtate.scss
+++ b/css/josephtate.scss
@@ -286,7 +286,7 @@ h3 {
     li {
       list-style: none;
       display: inline;
-      letter-spacing: 1em;
+      letter-spacing: .35em;
     }
 }
 
